[tool.poetry]
name = "gg-ai-bot"
version = "0.1.0"
description = ""
authors = ["n03an <nouman.memon@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^4.44.0"
openai = "^1.44.1"
ollama = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
